RESOLVED FIXED271087
UnifiedPDF: Find highlights sometimes appear in the wrong place if scrolling was needed
https://bugs.webkit.org/show_bug.cgi?id=271087
Summary UnifiedPDF: Find highlights sometimes appear in the wrong place if scrolling ...
Tim Horton
Reported 2024-03-15 16:23:38 PDT
UnifiedPDF: Find highlights sometimes appear in the wrong place if scrolling was needed
Attachments
Tim Horton
Comment 1 2024-03-15 16:23:47 PDT
Tim Horton
Comment 2 2024-03-15 16:32:52 PDT
EWS
Comment 3 2024-03-15 17:50:09 PDT
Committed 276216@main (b11f283a59bc): <https://commits.webkit.org/276216@main> Reviewed commits have been landed. Closing PR #25984 and removing active labels.
Abrar Rahman Protyasha
Comment 4 2024-03-19 18:09:03 PDT
*** Bug 271290 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.